Search image height fix, product item background color z-index fix

--- a/src/assets/styles/6.components/global/product-item.scss
+++ b/src/assets/styles/6.components/global/product-item.scss
@@ -42,7 +42,6 @@
   }
 
   &__background {
-    z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
